Fix some spacing and also highlight stoicism.

--- a/content/css/custom.css
+++ b/content/css/custom.css
@@ -82,7 +82,7 @@ body {
 	padding: 10px 20px;
 	border-radius: 10px;
 	background: #00000038;
-	margin: 10px 20px 15px 20px;
+	margin: 0 20px 40px 20px;
 }
 
 @media only screen and (min-width: 1307px) {
@@ -96,7 +96,7 @@ body {
 }
 
 body {
-	padding-top: 92px;
+	padding-top: 72px;
 }
 
 .header {
@@ -116,8 +116,21 @@ body {
 	opacity:  0.8;
 }
 
+.post,
 .post:not(:last-of-type) {
 	border-bottom: none;
+	margin-bottom: 0;
+}
+
+.post:first-child {
+	margin-top: 0;
+	padding-top: 0;
+}
+
+.post:last-child,
+.post:last-of-type {
+	border-bottom: 0;
+	padding-bottom: 0;
 	margin-bottom: 0;
 }
 
@@ -146,4 +159,12 @@ i.im {
 	border: none;
 	padding-right: 0;
 	margin-right: 0;
+}
+
+.content {
+	margin-bottom: 0;
+}
+
+.footer {
+	padding-top: 0;
 }
